io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalnative/C.java
package io.hotmoka.examples.errors.illegalnative;

public class C {
	public native void foo();
}